# jan-223-coroutines-talk

./: CMakeLists.txt  LICENSE  README.md  compute-crc.hpp  conanfile.txt  constants.hpp  coro.cpp  generator.cpp  immediate-ret-generator.cpp  iouring.hpp  main.cpp  result.hpp  task.hpp  thread-sync-example.cpp  udp-socket.hpp  utils.hpp
